--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,17 @@
 [project]
 name = "bunsalyze"
 version = "0.1.0"
-description = "Add your description here"
+description = "Rigorously counts protein-ligand hydrogen bonds using distance and angle information in a predicted or ground-truth 3D structure (PDB file)."
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.10"
 dependencies = [
     "freesasa>=2.2.1",
     "networkx>=3.5",
-    "numpy>=2.3.3",
-    "pdb2pqr>=3.7.1",
+    "numpy>=2.3.1",
     "prody>=2.6.1",
-    "rdkit>=2025.9.1",
-    "scipy>=1.16.2",
-    "torch>=2.8.0",
+    "rdkit>=2025.03.5",
+    "scipy>=1.16.0",
+    "torch>=2.4.0",
 ]
 
 
